Prevent topic icons overlapping entry preview content for iOS + Chrome

--- a/src/components/css/Entry.module.css
+++ b/src/components/css/Entry.module.css
@@ -93,8 +93,8 @@
 
 .sentiment {
 	position: absolute;
-	top: 1rem;
-	left: 1rem;
+	top: .5rem;
+	left: .5rem;
 }
 
 .text {
@@ -121,15 +121,13 @@
 }
 
 .topics {
-	flex-wrap: wrap;
-	max-width: calc(100% - 7rem);
-	position: absolute;
-	top: 1rem;
-	right: 1rem;
 	display: flex;
-
-	/* hack to engage viewport-units-buggyfill */
-	content: 'viewport-units-buggyfill; max-width: calc(100% - 7rem);';
+	flex-wrap: wrap;
+	justify-content: flex-end;
+	position: absolute;
+	top: .5rem;
+	right: .5rem;
+	margin-left: 5rem;
 }
 
 .topics > * {
